src/objects/OpportunitySplit.object
<CustomObject>
    <fields>
        <fullName>Brain_Lookup_split__c</fullName>
        <formula>IF(TEXT(Opportunity.Type)=&quot;Maintenance Renewal&quot;,&quot;Maintenance Renewals&quot;,
  IF(AND(TEXT(Opportunity.Type)=&quot;Subscription Renewal&quot;,Opportunity.CloseDate&lt;DATE(2016,1,1),OR(Opportunity.Account.Name=&quot;Computer Sciences Corporation&quot;,Opportunity.Account.Name=&quot;CSC&quot;,CONTAINS(Opportunity.Account.Name,&quot;CSC [&quot;))),&quot;CSC&quot;, 
    IF(Split_Owner_Team__c=&quot;Finance&quot;,&quot;Finance&quot;, 
      IF(AND(SplitOwner.Full_Name__c=&quot;Dominic DiMeco&quot;,Opportunity.CloseDate&lt;=DATEVALUE(&quot;2015-3-31&quot;)),&quot;Michael Killoran&quot;, 
        IF(Split_Owner_Team__c=&quot;Federal&quot;,SplitOwner.Full_Name__c, 
          IF(CONTAINS(Split_Owner_Team__c,&quot;Enterprise&quot;),
            IF(CONTAINS(SplitOwner.UserRole.Name,&quot;Enterprise Rep&quot;),SplitOwner.Full_Name__c, 
              CASE(SplitOwner.Full_Name__c, 
              &quot;Peter Jadovich&quot;,&quot;Eric Winslow&quot;, 
              SplitOwner.Full_Name__c)), 
          IF(Split_Owner_Team__c=&quot;Global Accounts US&quot;,IF(Opportunity.CloseDate&lt;DATEVALUE(&quot;2015-7-1&quot;),&quot;Chris Reisig&quot;,SplitOwner.Full_Name__c), 
            IF(Split_Owner_Team__c=&quot;Global Accounts International&quot;,IF(Opportunity.CloseDate&lt;DATEVALUE(&quot;2015-7-1&quot;),&quot;Andrew Mallaband&quot;,SplitOwner.Full_Name__c), 
              Split_Owner_Team__c
            )
          )
          )
        )
      )
    )
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brain Lookup (split)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checked_By_Finance__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Legacy Field: Finance must check this box to confirm the split.</inlineHelpText>
        <label>Checked By Finance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <formula>CreatedBy.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Forecasted_Split_Bookings_Quotas__c</fullName>
        <description>For use in the Turbo Weekly Dash</description>
        <formula>IF(TEXT(Opportunity.Type)=&quot;Maintenance Renewal&quot;,
CASE(Opportunity.StageName, 
&quot;Renewal&quot;,0.8, 
&quot;Identify&quot;,0.2, 
&quot;Pipeline&quot;,0.8, 
&quot;Commit&quot;,0.95, 
&quot;PO received&quot;,1, 
&quot;Closed Won&quot;,1, 
0)*Opportunity.Amount*SplitPercentage, 

IF(CONTAINS(Split_Owner_Team_Static_Group_Buckets__c,&quot;Velocity&quot;), 
CASE(Opportunity.Probability, 
0.25,0.25*MIN(100000,Opportunity.Amount*SplitPercentage), 
0.5,0.5*MIN(100000,Opportunity.Amount*SplitPercentage), 
0.9,0.9*Opportunity.Amount*SplitPercentage, 
0.99,0.99*Opportunity.Amount*SplitPercentage, 
1,Opportunity.Amount*SplitPercentage, 
0), 

IF(ISPICKVAL(Opportunity.Type,&quot;Quota&quot;),
Opportunity.Amount*SplitPercentage, 

CASE(Opportunity.Probability, 
0.25,0.5*MIN(250000,Opportunity.Amount*SplitPercentage), 
0.5,0.75*MIN(250000,Opportunity.Amount*SplitPercentage), 
0.9,0.9*Opportunity.Amount*SplitPercentage, 
0.99,0.99*Opportunity.Amount*SplitPercentage, 
1,Opportunity.Amount*SplitPercentage, 
0))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecasted Split Bookings (Quotas)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecasted_Split_Bookings_editable_EMEA__c</fullName>
        <formula>IF(Split_Owner_Team_Static_Group_Buckets__c= &quot;EMEA Velocity&quot;, 
CASE(Opportunity.StageName, 
&quot;Pipeline&quot;,0.2* MIN(75000,Opportunity.Amount*SplitPercentage), 
&quot;Upside&quot;,0.4*MIN(75000,Opportunity.Amount*SplitPercentage), 
&quot;Strong Upside&quot;,0.6*MIN(75000,Opportunity.Amount*SplitPercentage), 
&quot;Commit&quot;,0.95*MIN(75000,Opportunity.Amount*SplitPercentage), 
&quot;PO received&quot;,Opportunity.Amount*SplitPercentage, 
&quot;Closed Won&quot;,Opportunity.Amount*SplitPercentage, 
0), 

CASE(Opportunity.StageName,
&quot;Pipeline&quot;,0.15* MIN(250000,Opportunity.Amount*SplitPercentage), 
&quot;Upside&quot;,0.5*MIN(250000,Opportunity.Amount*SplitPercentage), 
&quot;Strong Upside&quot;,0.6*MIN(250000,Opportunity.Amount*SplitPercentage), 
&quot;Commit&quot;,0.95*Opportunity.Amount*SplitPercentage, 
&quot;PO received&quot;,Opportunity.Amount*SplitPercentage, 
&quot;Closed Won&quot;,Opportunity.Amount*SplitPercentage, 
0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecasted Split Bookings (editable)EMEA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecasted_Split_Bookings_editable__c</fullName>
        <formula>IF(TEXT(Opportunity.Type)=&quot;Maintenance Renewal&quot;, 
CASE(Opportunity.StageName, 
&quot;Renewal&quot;,0.8, 
&quot;Identify&quot;,0.2, 
&quot;Pipeline&quot;,0.8, 
&quot;Commit&quot;,0.95, 
&quot;PO received&quot;,1, 
&quot;Closed Won&quot;,1, 
0)*Opportunity.Amount*SplitPercentage, 

IF(CONTAINS(Split_Owner_Team_Static_Group_Buckets__c,&quot;Velocity&quot;), 
CASE(Opportunity.Probability, 
0.25,0.25*MIN(100000,Opportunity.Amount*SplitPercentage), 
0.5,0.5*MIN(100000,Opportunity.Amount*SplitPercentage), 
0.9,0.9*Opportunity.Amount*SplitPercentage, 
0.99,0.99*Opportunity.Amount*SplitPercentage, 
1,Opportunity.Amount*SplitPercentage, 
0), 

CASE(Opportunity.Probability, 
0.25,0.5*MIN(250000,Opportunity.Amount*SplitPercentage), 
0.5,0.75*MIN(250000,Opportunity.Amount*SplitPercentage), 
0.9,0.9*Opportunity.Amount*SplitPercentage, 
0.99,0.99*Opportunity.Amount*SplitPercentage, 
1,Opportunity.Amount*SplitPercentage, 
0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecasted Split Bookings (editable)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manual_SE_Split_Percentage__c</fullName>
        <description>Manual override for the SE split percentage, only to be modified by Finance or Ops</description>
        <label>Manual SE Split Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Manual_Split_Oppty_SE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manual Split Oppty SE</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <filterItems>
                <field>User.UserRoleId</field>
                <operation>equals</operation>
                <value>00ED0000001RI8P</value>
            </filterItems>
            <filterItems>
                <field>User.UserRoleId</field>
                <operation>equals</operation>
                <value>00E570000028QMJ</value>
            </filterItems>
            <filterItems>
                <field>User.UserRoleId</field>
                <operation>equals</operation>
                <value>00ED0000001RI8U</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Splits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manual_Split_Sales_Engineer__c</fullName>
        <description>Manual Override for the Sales Engineer on the split. To be modified by Sales Ops or Finance only.</description>
        <label>Manual Split Sales Engineer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Engineer_Assigned</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Split__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Split</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Split_Notes__c</fullName>
        <label>Finance Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Split_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Split Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Team__c</fullName>
        <formula>TEXT(SplitOwner.Team__c)</formula>
        <label>User Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q4_Central_Opp_Split__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Q4 Central Opp Split</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SE_Split_Amount__c</fullName>
        <description>Split amount for Sales Engineers. Will use the Sales Split percentage by default unless the manual SE split percentage is filled out by Ops or Finance</description>
        <formula>IF(NOT(ISBLANK(Manual_SE_Split_Percentage__c)),Manual_SE_Split_Percentage__c*Opportunity.Amount,SplitPercentage*Opportunity.Amount)</formula>
        <label>SE Split Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Split_Amount_Lost_Unqual__c</fullName>
        <formula>CASE(TEXT(Opportunity.StageName),
&quot;Unqualified&quot;, Split_Amount__c ,
&quot;Closed Lost&quot;, Split_Amount__c ,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Split Amount Lost/Unqual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Split_Amount_Open__c</fullName>
        <formula>CASE(TEXT(Opportunity.StageName),
&quot;Pipeline&quot;, Split_Amount__c ,
&quot;Upside&quot;, Split_Amount__c ,
&quot;Commit&quot;, Split_Amount__c ,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Split Amount Open</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Split_Amount__c</fullName>
        <formula>Opportunity.Amount*SplitPercentage</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Split Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Split_Amount_if_Best_Case__c</fullName>
        <formula>IF(TEXT(Opportunity.Forecast_Opportunity_2__c)=&quot;Best Case&quot;, Split_Amount__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Split Amount if Best Case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Split_Amount_if_Closed_Won__c</fullName>
        <formula>IF(TEXT(Opportunity.Forecast_Opportunity_2__c)=&quot;Closed Won&quot;, Split_Amount__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Split Amount if Closed Won</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Split_Amount_if_Forecast__c</fullName>
        <formula>IF(TEXT(Opportunity.Forecast_Opportunity_2__c)=&quot;Forecast&quot;, Split_Amount__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Split Amount if Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Split_Anchor_Realization_EJF__c</fullName>
        <formula>IF(NOT(Split_Run_Rate_EJF__c),
IF(Opportunity.Probability&gt;0,(Opportunity.Amount*SplitPercentage)-Forecasted_Split_Bookings_editable__c,0),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Split Anchor Realization (EJF)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Split_Owner_Safe_ID__c</fullName>
        <formula>SplitOwner.User_Safe_ID__c</formula>
        <label>Split Owner Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split_Owner_Team_Static_Group_Buckets__c</fullName>
        <formula>IF(OR(CONTAINS(Split_Owner_Team__c,&quot;Global Accounts International&quot;),CONTAINS(Split_Owner_Team__c,&quot;EMEA Enterprise&quot;)),&quot;EMEA Enterprise&quot;, 

IF(Split_Owner_Team__c=&quot;APAC Enterprise&quot;,&quot;APAC Enterprise&quot;, 

IF(OR(CONTAINS(Split_Owner_Team__c,&quot;Enterprise&quot;),Split_Owner_Team__c=&quot;MA Americas&quot;),&quot;US Enterprise&quot;,

IF(Split_Owner_Team__c=&quot;Business Development&quot;,&quot;Business Development&quot;,

IF(OR(Split_Owner_Team__c=&quot;Channel Sharks&quot;,
Split_Owner_Team__c=&quot;Xccelerators&quot;),&quot;Channel&quot;,

IF(OR(Split_Owner_Team__c=&quot;International&quot;,
Split_Owner_Team__c=&quot;Woodland Animals&quot;,
Split_Owner_Team__c=&quot;Bangers n Cash&quot;,
Split_Owner_Team__c=&quot;The Pipelime&quot;,
Split_Owner_Team__c=&quot;E-Unit&quot;,
Split_Owner_Team__c=&quot;Ganas iOS&quot;,
Split_Owner_Team__c=&quot;EMEA Commercial France&quot;,
Split_Owner_Team__c=&quot;EMEA Commercial UK&quot;),&quot;EMEA Velocity&quot;,

IF(Split_Owner_Team__c=&quot;Aussie Possie&quot;,&quot;APAC Velocity&quot;,

IF(Split_Owner_Team__c=&quot;Finance&quot;,&quot;Finance&quot;,

IF(Split_Owner_Team__c=&quot;&quot;,&quot;(no team specified)&quot;,

IF(Split_Owner_Team__c=&quot;Federal&quot;,&quot;Federal&quot;, 

IF(Split_Owner_Team__c=&quot;Los Conquistadores&quot;,&quot;LATAM&quot;,
IF(Split_Owner_Team__c=&quot;LATAM&quot;,&quot;LATAM&quot;,

IF(Split_Owner_Team__c=&quot;Wheelers and Dealers&quot;,&quot;US Deal Desk&quot;,
IF(Split_Owner_Team__c=&quot;Global Accounts US&quot;,&quot;US Alliances&quot;,

IF(CONTAINS(Split_Owner_Team__c,&quot;Corporate&quot;),&quot;US Velocity - Corporate&quot;,

&quot;US Velocity&quot;)))))))))))))))</formula>
        <label>Split User Team Static (Group Buckets)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split_Owner_Team__c</fullName>
        <label>Split User Team (Static)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split_Owner_User_Name__c</fullName>
        <formula>SplitOwner.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Split Owner Username</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split_Risk_Projection_50_EFJ__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Split Risk Projection &gt;50% (EJF)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Split_Risk_Projection_75_EFJ__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Split Risk Projection &gt;75% (EJF)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Split_Risk_Projection_90_EFJ__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Split Risk Projection &gt;90% (EJF)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Split_Run_Rate_EJF__c</fullName>
        <formula>Opportunity.Amount*SplitPercentage&lt;250000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Split Run Rate (EJF)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Split_Sales_Engineer_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A second SE assigned to an oppty</description>
        <inlineHelpText>If there is a second SE to add to the split oppty use this field</inlineHelpText>
        <label>2* Split Sales Engineer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRoleId</field>
                <operation>equals</operation>
                <value>00ED0000001RI8U</value>
            </filterItems>
            <filterItems>
                <field>User.UserRoleId</field>
                <operation>equals</operation>
                <value>00E570000028QMJ</value>
            </filterItems>
            <filterItems>
                <field>User.UserRoleId</field>
                <operation>equals</operation>
                <value>00ED0000001RI8P</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Splits1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Split_Sales_Engineer__c</fullName>
        <description>The Sales Engineer assigned to the split. Will default to the Sales Engineer assigned to the opportunity unless overridden by the &quot;Manual Split Sales Engineer&quot; field. The Manual Split Sales Engineer field should only be modified by Sales ops or Finance.</description>
        <formula>IF(
NOT(ISBLANK(Manual_Split_Oppty_SE__c)),
(Manual_Split_Oppty_SE__r.Full_Name__c), 
 Opportunity.SE_Assigned1__c
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Split Sales Engineer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split_User_Team_Old__c</fullName>
        <label>Split User Team (Old)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Max_Deal_Amount__c</fullName>
        <formula>IF(Opportunity.Amount=0,0,

MAX( Split_Amount__c ,((Split_Amount__c / Opportunity.Amount)*Opportunity.Total_Max_Deal_Amount__c))

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Max Deal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trigger_Workflow_Rules__c</fullName>
        <label>Trigger Workflow Rules</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Tenure__c</fullName>
        <formula>SplitOwner.Tenure_days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Tenure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Dont_Allow_Opp_Split_Changes</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(
ISCHANGED(SplitOwnerId),
ISCHANGED(SplitPercentage),
ISCHANGED(Checked_By_Finance__c)),
$UserRole.Name&lt;&gt;&quot;CFO&quot;,
NOT(CONTAINS($UserRole.Name,&quot;Finance&quot;)),
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;)</errorConditionFormula>
        <errorMessage>Only Sales Ops may enter in splits. Please contact Sales Ops with any split requests.</errorMessage>
    </validationRules>
</CustomObject>